--- a/Artivity.Apid.Modules.Journal/app/partials/file-view.html
+++ b/Artivity.Apid.Modules.Journal/app/partials/file-view.html
@@ -22,7 +22,7 @@
 		</div>
 	</div>
 
-	<div id="body-wrapper">
+	<div id="body-wrapper" class="bottom-toolbar">
 		<div id="body">
 			<div class="ui-resizable ui-pane ui-pane-left">
 				<div class="pane-content padded">
