--- a/Artivity.Apid.Modules.Journal/app/partials/settings.html
+++ b/Artivity.Apid.Modules.Journal/app/partials/settings.html
@@ -26,7 +26,7 @@
 				</ul>
 			</div>
 			<div class="ui-pane ui-pane-center">
-				<div class="tab-content" style="max-width: 800px;">
+				<div class="tab-content nav-stacked" style="max-width: 800px;">
 					<!-- PROFILE -->
 					<div role="tabpanel" class="tab-pane padded-lg fade active in" id="user-panel">
 						<form name="userForm" ng-controller="UserSettingsController as userSettings" ng-submit="submit()">
