--- a/Artivity.Apid.Modules.Journal/app/partials/settings.html
+++ b/Artivity.Apid.Modules.Journal/app/partials/settings.html
@@ -12,7 +12,7 @@
 				<h5 class="title" translate="SETTINGS.TITLE"></h5>
 			</div>
 			<div class="col">
-				<button class="btn btn-default btn-icn btn-header" onclick="history.back()"><i class="zmdi zmdi-close"></i></button>
+				<button class="btn btn-default btn-icn btn-header" onclick="history.back()"><i class="zmdi zmdi-close-circle"></i></button>
 			</div>
 		</div>
 	</div>
