--- a/Artivity.Apid.Modules.Journal/app/css/style.scss
+++ b/Artivity.Apid.Modules.Journal/app/css/style.scss
@@ -19,7 +19,7 @@ $accentColor: #FFFFFF;
 $accentTextColor: #1D1D1D;
 $errorColor: #ED3E44;
 $errorTextColor: #FFFFFF;
-$iconFontSize: 25px;
+$iconFontSize: 20px;
 $selectionTextColor: white;
 $selectionBorderColor: transparent;
 $selectionBackgroundColor: rgba($textColor, .1);
@@ -442,17 +442,17 @@ h4 {
 	margin: 0;
 	border-spacing: 0;
 	table-layout: fixed;
-    z-index: 1000;
+	z-index: 1000;
 }
 
 #header {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: 1;
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	z-index: 1;
 	border-top: 1px solid darken($headerBackgroundColor, 5%);
-    border-bottom: 1px solid darken($headerBackgroundColor, 5%);
+	border-bottom: 1px solid darken($headerBackgroundColor, 5%);
 }
 
 .table .row,
@@ -551,6 +551,7 @@ h4 {
 	top: 65px;
 }
 
+
 /* BODY */
 
 #body-wrapper {
@@ -559,7 +560,7 @@ h4 {
 	right: 0;
 	bottom: 0;
 	top: 52px;
-    z-index: 0;
+	z-index: 0;
 }
 
 #body-wrapper.bottom-toolbar {
@@ -1053,6 +1054,32 @@ select.form-control:focus {
 .modal-dialog {
 	margin-top: 60px;
 	box-shadow: none;
+}
+
+.modal-window-lg .modal-dialog {
+	position: absolute;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	width: auto;
+	margin: 60px;
+}
+
+.modal-window-lg .modal-content {
+	display: table;
+	width: 100%;
+	height: 100%;
+	background: #222;
+}
+
+.modal-window-lg .modal-header {
+	display: table-cell;
+	height: 50px;
+}
+
+.modal-window-lg .modal-body {
+	display: table-row;
 }
 
 .modal-header,
