--- a/Artivity.Apid.Modules.Journal/app/css/style.scss
+++ b/Artivity.Apid.Modules.Journal/app/css/style.scss
@@ -1748,7 +1748,7 @@ path.color1 {
 
 /* CONNECTION SPINNER */
 
-.spinner {
+.spinner.connecting {
 	display: inline-block;
 	margin: 0 3px 0 0;
 	width: 20px;
@@ -1758,7 +1758,7 @@ path.color1 {
 	top: 3px;
 }
 
-.spinner > div {
+.spinner.connecting > div {
 	background-color: white;
 	height: 100%;
 	width: 4px;
@@ -1767,22 +1767,22 @@ path.color1 {
 	animation: sk-stretchdelay 1.2s infinite ease-in-out;
 }
 
-.spinner .rect2 {
+.spinner.connecting .rect2 {
 	-webkit-animation-delay: -1.1s;
 	animation-delay: -1.1s;
 }
 
-.spinner .rect3 {
+.spinner.connecting .rect3 {
 	-webkit-animation-delay: -1.0s;
 	animation-delay: -1.0s;
 }
 
-.spinner .rect4 {
+.spinner.connecting .rect4 {
 	-webkit-animation-delay: -0.9s;
 	animation-delay: -0.9s;
 }
 
-.spinner .rect5 {
+.spinner.connecting .rect5 {
 	-webkit-animation-delay: -0.8s;
 	animation-delay: -0.8s;
 }
@@ -1809,4 +1809,72 @@ path.color1 {
 		transform: scaleY(1.0);
 		-webkit-transform: scaleY(1.0);
 	}
+}
+
+.spinner.loading,
+.spinner.loading:before,
+.spinner.loading:after {
+  border-radius: 50%;
+}
+.spinner.loading:before,
+.spinner.loading:after {
+  position: absolute;
+  content: '';
+}
+.spinner.loading:before {
+  width: 5.2em;
+  height: 10.2em;
+  background: #222;
+  border-radius: 10.2em 0 0 10.2em;
+  top: -0.1em;
+  left: -0.1em;
+  -webkit-transform-origin: 5.2em 5.1em;
+  transform-origin: 5.2em 5.1em;
+  -webkit-animation: load2 2s infinite ease 1.5s;
+  animation: load2 2s infinite ease 1.5s;
+}
+.spinner.loading {
+  color: $labelColor;
+  font-size: 5px;
+  text-indent: -99999em;
+  margin: 55px auto;
+  position: relative;
+  width: 10em;
+  height: 10em;
+  box-shadow: inset 0 0 0 1em;
+  -webkit-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  transform: translateZ(0);
+}
+.spinner.loading:after {
+  width: 5.2em;
+  height: 10.2em;
+  background: #222;
+  border-radius: 0 10.2em 10.2em 0;
+  top: -0.1em;
+  left: 5.1em;
+  -webkit-transform-origin: 0px 5.1em;
+  transform-origin: 0px 5.1em;
+  -webkit-animation: load2 2s infinite ease;
+  animation: load2 2s infinite ease;
+}
+@-webkit-keyframes load2 {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+@keyframes load2 {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
 }
