--- a/Artivity.Apid.Modules.Journal/app/partials/file-list.html
+++ b/Artivity.Apid.Modules.Journal/app/partials/file-list.html
@@ -47,7 +47,8 @@
 			<button class="btn btn-sm btn-circular btn-no-margin pull-right" ng-click="cancel()"><i class="zmdi zmdi-close"></i></button>
 		</div>
 		<div class="modal-body">
-			<div art-calendar art-activities-src="$parent.activities"></div>
+			<div art-calendar></div>
+			<div ng-show="isLoading" class="spinner loading" style="position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%)"></div>
 		</div>
 	</script>
 </div>
