--- a/Artivity.Apid.Modules.Journal/app/partials/settings.html
+++ b/Artivity.Apid.Modules.Journal/app/partials/settings.html
@@ -157,7 +157,7 @@
 									<div class="modal-status-bar">
 										<div class="modal-state fade in" style="background-color: #3694c3;" ng-show="connectorState === 1">
 											<div class="pull-center">
-												<div class="spinner">
+												<div class="spinner connecting">
 													<div class="rect1"></div>
 													<div class="rect2"></div>
 													<div class="rect3"></div>
