--- a/Artivity.Apid.Modules.Journal/app/partials/file-view.html
+++ b/Artivity.Apid.Modules.Journal/app/partials/file-view.html
@@ -16,6 +16,9 @@
 				<h5 class="title">{{file.label}}</h5>
 			</div>
 			<div class="col">
+				<a id="export-btn" class="btn btn-header" ng-click="shareFile()"><i class="zmdi zmdi-hc-fw zmdi-share"></i></a>
+			</div>
+			<div class="col">
 				<a id="export-btn" class="btn btn-header" ng-click="exportFile()"><i class="zmdi zmdi-hc-fw zmdi-archive"></i></a>
 			</div>
 		</div>
@@ -118,7 +121,7 @@
 
 			<div class="ui-resizable ui-pane ui-pane-right">
 				<div class="pane-content">
-					<ul class="nav nav-tabs tablist" id="tabs-right" role="tablist">
+					<ul class="nav nav-tabs nav-tabs-top tablist" id="tabs-right" role="tablist">
 						<li role="presentation" class="active"><a data-target="#statistics" role="tab" data-toggle="tab">{{'FILEVIEW.STATISTICS' | translate}}</a></li>
 					</ul>
 
@@ -208,6 +211,72 @@
 				</div>
 			</div>
 		</div>
+
+		<script type="text/ng-template" id="share-dialog.html">
+			<div class="modal-header">
+				<button class="btn btn-sm btn-circular btn-no-margin pull-right" ng-click="cancel()"><i class="zmdi zmdi-close"></i></button>
+
+				<h2 class="modal-title">{{title}}</h2>
+			</div>
+			<div class="modal-body">
+				<div ng-show="!isUploading">
+					<table>
+						<tr>
+							<td valign="top">
+								<div class="card no-margin">
+									<div class="img-thumbnail"></div>
+									<div class="title">{{file.label}}</div>
+								</div>
+							</td>
+							<td>
+								<div style="padding: 0 0 0 15px">
+									<div class="form-group">
+										<label for="account">Choose account:</label>
+										<br>
+										<select class="form-control" name="account" ng-options="account as account.Title for account in accounts track by account.Uri" ng-model="selectedAccount"></select>
+									</div>
+
+									<div class="form-group">
+										<label>Choose what to share:</label>
+										<br>
+										<ul class="nav nav-tabs tablist" role="tablist">
+											<li role="presentation" class="active"><a data-target="#activities-pane" role="tab" data-toggle="tab">Activities</a></li>
+											<li role="presentation"><a data-target="#websites-pane" role="tab" data-toggle="tab">Websites</a></li>
+										</ul>
+
+										<div class="tab-content" style="min-height: 200px;">
+											<div role="tabpanel" class="tab-pane fade active in" id="activities-pane">
+												<ul class="lst-activities list-unstyled">
+													<li ng-repeat="activity in activities">
+														{{activity.startTime}}
+													</li>
+												</ul>
+											</div>
+											<div role="tabpanel" class="tab-pane fade" id="websites-pane">
+												<label>No related websites.</label>
+											</div>
+										</div>
+									</div>
+								</div>
+							</td>
+						</tr>
+					</table>
+					<div class="text-center">
+						<button class="btn btn-default" ng-click="beginUpload()">Upload</button>
+					</div>
+				</div>
+				<div ng-show="isUploading">
+					<label>{{selectedAccount.Title}}</label>
+					<label class="pull-right">{{uploadProgress}}%</label>
+
+					<uib-progressbar value="uploadProgress" max="100" style="height: 5px"></uib-progressbar>
+
+					<div class="text-center">
+						<button class="btn btn-default" ng-click="cancelUpload()">Cancel</button>
+					</div>
+				</div>
+			</div>
+		</script>
 	</div>
 
 	<div id="footer">
