--- a/Artivity.Apid.Modules.Journal/app/partials/file-view.html
+++ b/Artivity.Apid.Modules.Journal/app/partials/file-view.html
@@ -16,7 +16,7 @@
 				<h5 class="title">{{file.label}}</h5>
 			</div>
 			<div class="col">
-				<a id="export-btn" class="btn btn-header" ng-click="shareFile()"><i class="zmdi zmdi-hc-fw zmdi-share"></i></a>
+				<a id="export-btn" class="btn btn-header" ng-click="shareFile()"><i class="zmdi zmdi-hc-fw zmdi-cloud-upload"></i></a>
 			</div>
 			<div class="col">
 				<a id="export-btn" class="btn btn-header" ng-click="exportFile()"><i class="zmdi zmdi-hc-fw zmdi-archive"></i></a>
