--- a/Artivity.Apid.Modules.Journal/app/partials/file-list.html
+++ b/Artivity.Apid.Modules.Journal/app/partials/file-list.html
@@ -44,7 +44,7 @@
 
 	<script type="text/ng-template" id="calendar.html">
 		<div class="modal-header">
-			<button class="btn btn-sm btn-circular btn-no-margin pull-right" ng-click="cancel()"><i class="zmdi zmdi-close"></i></button>
+			<button class="btn btn-sm btn-circular no-margin pull-right" ng-click="cancel()"><i class="zmdi zmdi-close"></i></button>
 		</div>
 		<div class="modal-body">
 			<div art-calendar style="margin: 10px;"></div>
