--- a/Artivity.Apid.Modules.Journal/app/partials/settings.html
+++ b/Artivity.Apid.Modules.Journal/app/partials/settings.html
@@ -6,13 +6,13 @@
 	<div id="header">
 		<div class="row">
 			<div class="col">
-				<button class="btn btn-default btn-icn btn-header" ng-click="submitAndReturn()"><i class="zmdi zmdi-hc-fw"></i></button>
+				<button class="btn btn-default btn-icn btn-header" ng-click="submitAndReturn()"><i class="zmdi zmdi-chevron-left"></i></button>
 			</div>
 			<div class="col expand">
 				<h5 class="title" translate="SETTINGS.TITLE"></h5>
 			</div>
 			<div class="col">
-				<button class="btn btn-default btn-icn btn-header" onclick="history.back()"><i class="zmdi zmdi-close-circle"></i></button>
+				<button class="btn btn-default btn-icn btn-header" onclick="history.back()"><i class="zmdi zmdi-close"></i></button>
 			</div>
 		</div>
 	</div>
