--- a/Artivity.Apid.Modules.Journal/app/partials/dialogs/account-add-dialog.html
+++ b/Artivity.Apid.Modules.Journal/app/partials/dialogs/account-add-dialog.html
@@ -1,57 +1,58 @@
-<div style="background: #222">
-	<div class="modal-header">
-		<button class="btn btn-sm btn-circular no-margin pull-right" ng-click="cancel()"><i class="zmdi zmdi-close"></i></button>
+<div class="modal-header">
+	<h2 class="modal-title">{{ title | translate}}</h2>
+</div>
+<div ng-switch="selectedClient.Uri" class="modal-body">
+	<div ng-switch-default>
+		<p class="description">Please select the account type to connect with:</p>
 
-		<h2 class="modal-title">{{ title | translate}}</h2>
-	</div>
-	<div class="modal-body">
-		<div ng-show="selectedClient == null">
-			<p class="description">Please select the account type to connect with:</p>
-
-			<ul class="list-view">
-				<li class="list-item" ng-repeat="client in clients">
-					<a ng-click="selectClient(client)" style="cursor: pointer;">
-						<div class="col col-icn col-icn-lg">
-							<i class="zmdi zmdi-account"></i>
-						</div>
-
-						<div class="col expand">
-							<div style="padding: 9px">
-								<h5>{{client.Title}}</h5>
-								<label>{{client.Uri + '.description' | translate}}</label>
-							</div>
-						</div>
-					</a>
-				</li>
-			</ul>
-		</div>
-		<div ng-show="selectedClient.Uri === 'http://eprints.org'">
-			<form name="connectForm" ng-submit="connectAccount(selectedClient)">
-				<p class="description">Please enter the server address, username and password of the repository:</p>
-
-				<input type="text" class="form-control" id="url" name="url" placeholder="http://example.org" ng-model="parameter.url" required>
-
-				<fieldset>
-					<h4>Login</h4>
-
-					<div class="form-group">
-						<input class="form-control form-control-login" type="text" placeholder="Username" id="username" name="username" size="20" maxlength="20" ng-model="parameter.username" required>
-						<input class="form-control form-control-login" type="password" placeholder="Password" id="password" name="password" size="20" maxlength="20" ng-model="parameter.password" ui-keypress="{13:'connectAccount(selectedClient)'}" required>
+		<ul class="list-view">
+			<li class="list-item" ng-repeat="client in clients">
+				<a ng-click="selectClient(client)" style="cursor: pointer;">
+					<div class="col col-icn col-icn-lg">
+						<i class="zmdi zmdi-account"></i>
 					</div>
 
-					<button type="submit" class="btn btn-default" ng-disabled="connectForm.url.$invalid || connectForm.username.$invalid || connectForm.password.$invalid || (0 < clientState && clientState < 3)">Connect</button>
-				</fieldset>
-			</form>
-		</div>
-		<div ng-show="selectedClient.Uri === 'http://orcid.org'">
-			<p class="description">Please log into your ORCiD account and allow Artivity to be connected:</p>
-
-			<iframe ng-src="{{clientUrl}}" style="min-height: 400px; width: 100%;">
-			</iframe>
-		</div>
+					<div class="col expand">
+						<div style="padding: 9px">
+							<h5>{{client.Title}}</h5>
+							<label>{{client.Uri + '.description' | translate}}</label>
+						</div>
+					</div>
+				</a>
+			</li>
+		</ul>
 	</div>
-	<div class="modal-status-bar">
-		<div class="modal-state fade in" style="background-color: #3694c3;" ng-show="clientState === 1">
+
+	<div ng-switch-when="http://eprints.org">
+		<form name="connectForm" ng-submit="connectAccount(selectedClient)">
+			<p class="description">Please enter the server address, username and password of the repository:</p>
+
+			<input type="text" class="form-control" id="url" name="url" placeholder="http://example.org" ng-model="parameter.url" required>
+
+			<label style="margin-top: .5em;">Login</label>
+
+			<div class="form-group">
+				<input class="form-control form-control-login" type="text" placeholder="Username" id="username" name="username" size="20" maxlength="20" ng-model="parameter.username" required>
+				<input class="form-control form-control-login" type="password" placeholder="Password" id="password" name="password" size="20" maxlength="20" ng-model="parameter.password" ui-keypress="{13:'connectAccount(selectedClient)'}" required>
+			</div>
+
+			<button type="submit" class="btn btn-default" ng-disabled="connectForm.url.$invalid || connectForm.username.$invalid || connectForm.password.$invalid || (0 < clientState && clientState < 3)">Connect</button>
+		</form>
+	</div>
+
+	<div ng-switch-when="http://orcid.org">
+		<p class="description">Please log into your ORCiD account and allow Artivity to be connected:</p>
+
+		<iframe ng-src="{{clientUrl}}" style="min-height: 400px; width: 100%;">
+		</iframe>
+	</div>
+
+	<div class="modal-footer-buttons text-center">
+		<button class="btn btn-icn btn-circular no-margin pull-right" ng-click="cancel()"><i class="zmdi zmdi-close"></i></button>
+	</div>
+
+	<div ng-switch="clientState" class="modal-status-bar">
+		<div ng-switch-when="1" class="modal-state" style="background-color: #3694c3;">
 			<div class="pull-center">
 				<div class="spinner connecting">
 					<div class="rect1"></div>
@@ -60,13 +61,13 @@
 				</div> Connecting..
 			</div>
 		</div>
-		<div class="modal-state fade in" style="background-color: #849324;" ng-show="clientState === 2">
+		<div ng-switch-when="2" class="modal-state" style="background-color: #849324;">
 			<i class="zmdi zmdi-check zmdi-sm"></i> Authorization successful.
 		</div>
-		<div class="modal-state fade in" style="background-color: #EB7414;" ng-show="clientState === 3">
+		<div ng-switch-when="3" class="modal-state" style="background-color: #EB7414;">
 			<i class="zmdi zmdi-alert-triangle zmdi-sm"></i> Wrong username or password.
 		</div>
-		<div class="modal-state fade in" style="background-color: #EB7414;" ng-show="clientState === 4">
+		<div ng-switch-when="4" class="modal-state" style="background-color: #EB7414;">
 			<i class="zmdi zmdi-alert-triangle zmdi-sm"></i> Connection error.
 		</div>
 	</div>
